--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="./src/assets/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KIRAN</title>
+    <title>KIRAN Learning Platform</title>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./src/styles/student-dashboard.css">
     <!-- Font Awesome Icons -->
