--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,5 +15,6 @@
     <script type="module" src="/src/main.jsx"></script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </body>
 </html>
