--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/logo.jpg" />
+    <!-- <link rel="icon" type="image/png" href="./src/assets/logo.jpg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KIRAN Learning Platform</title>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./src/styles/student-dashboard.css">
+    <link rel="stylesheet" href="./src/styles/student-dashboard.css" />
     <!-- Font Awesome Icons -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
